# standa

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  standa.ipynb
