[tool.poetry]
name = "standa"
version = "0.1.0"
description = "Stock Analysis Dashboard"
authors = ["Fayssal El Mofatiche <fayssal.elmofatiche@dnbf.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panel = "^1.3.6"
requests = "^2.31.0"
cufflinks = "^0.17.3"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
